# Software-Engineering-Project-2025-MAZOUZ

./: README.md  cli.py
Projet-MAZOUZ/: .gitignore  pyproject.toml
Projet-MAZOUZ/bitpacking/: __init__.py
bitpacking/: packing.py
tests/: test_bitpacking.py
